--- a/style.css
+++ b/style.css
@@ -8,7 +8,10 @@ body,
   font-family: "Fira Code", "Courier New", Courier, monospace;
   font-size: 10px;
   box-sizing: border-box;
-  background-color: black;
+}
+
+body {
+  background: #2f2f2f;
 }
 
 h1 {
@@ -46,4 +49,46 @@ h6 {
 
 p {
   font-size: 1.8rem;
+}
+
+#code * {
+  font-size: 1.8rem;
+  color: green;
+}
+
+#code {
+  width: 100vw;
+  border: 1px solid white;
+  box-shadow: 0.2rem 0.2rem 1.5rem black;
+}
+
+tr,
+td {
+  padding: 0.55rem;
+}
+
+tr:nth-child(odd) {
+  background: black;
+  margin: 0;
+}
+
+tr:nth-child(even) > * {
+  background-color: #2f2f2f;
+  margin: 0;
+}
+
+table,
+tr,
+td {
+  border: none;
+  border-spacing: 0px;
+}
+
+.ln {
+  width: 3rem;
+  /* border-right: 6px double #6f6f6f; */
+}
+
+.text {
+  padding-left: 2rem;
 }
