--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,39 +3,39 @@ body,
 *,
 *::after,
 *::before {
-  margin: 0;
-  padding: 0;
-  font-family: "Fira Code", "Courier New", Courier, monospace;
-  font-size: 10px;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: "Fira Code", "Courier New", Courier, monospace;
+    font-size: 10px;
+    box-sizing: border-box;
 }
 
 body {
-  background: #2f2f2f;
+    background: #2f2f2f;
 }
 
 h1 {
-  font-size: 8rem;
+    font-size: 8rem;
 }
 
 h2 {
-  font-size: 6rem;
+    font-size: 6rem;
 }
 
 h3 {
-  font-size: 4rem;
+    font-size: 4rem;
 }
 
 h4 {
-  font-size: 3rem;
+    font-size: 3rem;
 }
 
 h5 {
-  font-size: 2.4rem;
+    font-size: 2.4rem;
 }
 
 h6 {
-  font-size: 2rem;
+    font-size: 2rem;
 }
 
 h1,
@@ -44,51 +44,27 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 p {
-  font-size: 1.8rem;
+    font-size: 1.8rem;
 }
 
 #code * {
-  font-size: 1.4rem;
-  color: #eee;
+    font-size: 1.4rem;
+    color: #eee;
 }
 
 #code {
-  width: 100vw;
-  border: 1px solid white;
-  box-shadow: 0.2rem 0.2rem 1.5rem black;
-  font-weight: 600;
+    width: 100vw;
+    border: 1px solid white;
+    box-shadow: 0.2rem 0.2rem 1.5rem black;
+    font-weight: 600;
 }
 
-tr,
-td {
-  padding: 0.15rem;
-}
-
-tr:nth-child(odd) {
-  background: black;
-  margin: 0;
-}
-
-tr:nth-child(even) > * {
-  background-color: #0f0f0f;
-  margin: 0;
-}
-
-table,
-tr,
-td {
-  border: none;
-  border-spacing: 0px;
-}
-
-.ln {
-  width: 3rem;
-}
-
-.text {
-  padding-left: 2rem;
+table td,
+table td *,
+table td pre span {
+    vertical-align: top;
 }
